[metadata]
name = transit
version = 0.1
author = TVKain
author_email = tvkain.it@gmail.com
description = Transit Gateway
long_description = file: README.md
classifiers =
    Framework :: Flask
    Programming Language :: Python :: 3

[options]

packages=find:

install_requires = 
    Flask
    openstacksdk
    python-dotenv
    oslo.db
    oslo.messaging
    oslo.config
    oslo.concurrency
    Flask-SQLAlchemy
    pymysql
    pydantic
    Flask-Pydantic
    taskflow
    cotyledon
    fastapi 
    sqlmodel 

[options.entry_points]
console_scripts =
    transit-api = transit.cmd.api:main
    transit-agent = transit.transit_agent.run:main
    transit-worker = transit.cmd.controller_worker:main
    transit-api-new = transit.cmd.fast_api:main
oslo.config.opts = 
    transit.config = transit.opts:list_opts


[options.extras_require]
dev = 
    pytest

[tool.pylint]
ignored-modules = ["alembic.context", "alembic.op"]




